<resources>
    <string name="app_name">Bring Bread</string>
    <string name="action_settings">Settings</string>

    <string name="T_main">Els vostres enàarrecs</string>
    <string name="T_dialog_add">Afegir encàrrec</string>

    <string name="dialog_name">Descripció</string>
    <string name="dialog_loc">Localització</string>
    <string name="dialog_lat">Latitud</string>
    <string name="dialog_lon">Longitud</string>
    <string name="dialog_ok">Afegir</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_done">Fet!</string>
    <string name="dialog_snooze">Ara no puc</string>
    <string name="dialog_text2">Pots fer aquest encàrrec?</string>

    <string name="hint_name">Comprar pa...</string>
    <string name="notif_text2">Llisca a esquerra o dreta per ingorar-me</string>

    <string name="error_dialog_white">Sembla que hi ha un camp en blanc!</string>

    <!--<string name=""></string>-->

</resources>
