<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp">

    <TextView
        style="@style/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_name"/>

    <EditText
        android:id="@+id/et_nomTasca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:hint="@string/hint_name"/>

    <TextView
        style="@style/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_loc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_lat"/>
            <EditText
                android:id="@+id/et_latitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:inputType="numberDecimal|numberSigned"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_lon"/>
            <EditText
                android:id="@+id/et_longitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:inputType="numberDecimal|numberSigned"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnOkDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_ok"
            android:layout_gravity="right"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>