<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_Dialog_Nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Exemple de titol"
        android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>

    <TextView
        android:id="@+id/tv_Dialog_Loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text2"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Subtitle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">

        <Button
            android:id="@+id/btnSnoozeDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_snooze"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/btnFetDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_done"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

</LinearLayout>